kubernetes/eks/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: microservice
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - http:
        paths:
          - path: /banks
            pathType: Prefix
            backend:
              service:
                name: bank-service
                port:
                  number: 8083

          - path: /branches
            pathType: Prefix
            backend:
              service:
                name: bank-service
                port:
                  number: 8083

          - path: /login
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8070

          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8071

          - path: /applicants
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8071

          - path: /applications
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8071

          - path: /transactions
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 8070
